# customs_randomizer_discord_bot

./: .gitignore  Cargo.toml  JgChamps.txt  README.md
src/: choose_champions.rs  commands.rs  data.rs  errors.rs  main.rs  riot_api.rs  summoner_data.rs  util.rs
