[package]
name = "discord_champ_randomizer_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-serenity = { version = "0.36.0", default-features = false, features = [
  "serenity-0-12-rustls_backend",
] }
anyhow = "1.0.79"
tokio = "1.35.1"
env_logger = "0.11.0"
poise = "0.6.1-rc1"
poise_macros = "0.6.1-rc1"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
riven = "2.30.0"
rand = "0.8.5"
tabled = "0.15.0"
multimap = "0.10.0"
serde = "1.0.196"
serde_json = "1.0.114"
futures = "0.3.30"
